; ModuleID = '/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_main.c_path.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_main.c_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@build_directory = common dso_local global i8* null, align 8
@object_directory = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"%s/%s/%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** @build_directory, align 8
  %5 = call i64 @strlen(i8* %4)
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @strlen(i8* %6)
  %8 = add nsw i64 %5, %7
  %9 = load i8*, i8** @object_directory, align 8
  %10 = call i64 @strlen(i8* %9)
  %11 = add nsw i64 %8, %10
  %12 = add nsw i64 %11, 3
  %13 = trunc i64 %12 to i32
  %14 = call i8* @malloc(i32 %13)
  store i8* %14, i8** %3, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = load i8*, i8** @object_directory, align 8
  %17 = load i8*, i8** @build_directory, align 8
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %17, i8* %18)
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
